making process on webscraping

--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <title>Stolte Wedding</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" style="position: relative; min-height: 100vh"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
